[package]
name = "aoc2017"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.3"
md5 = "0.7.0"
priority-queue = "1.2.3"
regex = "1.6.0"
