[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.40.0"
itertools = "0.10.3"
once_cell = "1.16.0"
priority-queue = "1.2.3"
regex = "1.6.0"
