[package]
name = "aoc2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.3"
priority-queue = "1.3.0"
regex = "1.6.0"
text_io = "0.1.12"
